# meme-search-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  clip_server.py  clip_server_config.json  config2.json  faiss_bench_quantizer.py  formats.json  frontend_config.json  generate_queries_bin.py  genseahash.py  kmeans.py  load_embedding.py  mse.py  mse_config.json  ocr.mjs  ocr.py  ocr_config.json  package-lock.json  package.json  perf_test.py  requirements.txt  slow_dump_parse_script.py  thumbnailer.py  thumbnailer_config.json
.sqlx/: query-0d5b91c01acf72be0cd78f1a0c58c417e06d7c4e53e1ec542243ccf2808bbab7.json  query-63edaa9692deb1a9fb17d9e16905a299878bc0fe4af582c6791a411741ee41d9.json  query-80b42ff05db7c2ccd104f2c3e8b50803117eea987d16e403a2c6873e31200ac3.json  query-b6803e2443445de725290dde85de5b5ef87958bec4d6db6bd06660b71f7a1ad0.json  query-bed71d48c691bff7464b1aa767162df98ee2fcbe8df11f7db18a3647b2e0f1a2.json  query-d56ec6cf262f4f17cd2aaa1a6413bf0fec1d7a35661cfd02feae01e94b807b7b.json  query-de6df63baa6ab4102d815e8d84bc4e14cd25c2d08ea2b2731bd640be6539edce.json  query-e5c8968dfb8e42d465912cde4ad8a7042dc7b6e4d5948e53a6668df7b00dee3b.json  query-ec2da4ab11ede7a9a468ff3a50c55e0f6503fddd369f2c3031f39c0759bb97a0.json  query-ee6eca5b34c3fbf76cd10932db35c6d8631e48be9166c02b593020a17fcf2686.json  query-fccbb4262990c387079141c60a96d4e030ff82b93975f13d96539957b24f3c13.json
aitemplate/: model.py  run.py
clipfront2/: package-lock.json  package.json
clipfront2/src/: About.svelte  App.svelte  Loading.svelte  Masonry.svelte  NavItem.svelte  QueryRefiner.svelte  ResultImage.svelte  SearchResults.svelte  app.js  build.js  common.sass  util.js
clipfront2/static/: index.html
diskann/: Cargo.toml  aopq_train.py  chainq.py  hdf5_to_bin.py  opq_test.py  rabitq.py  scalar_quantize.py  vec_dist.py
diskann/src/: lib.rs  main.rs  vector.rs
docker/: Dockerfile  docker-compose.yml
docker/config/: backend_config.json  clip_server_config.json  frontend_config.json  nginx.conf  thumbnailer_config.json
meme-rater/: active_learning.py  active_learning_find_top.py  active_learning_gradients.py  al2.py  auroc_test.py  compute_cdf.py  copy_into_queue.py  crawler.py  ensemble_to_wide_model.py  eval.py  extract_test_set.py  final_eval_results.py  library_processing_server.py  load_from_json.py  log.jsonl  meme_pipeline.py  model.py  pca.py  rater_mse_config.json  rater_server.py  roc_plot.py  run_graph.py  shared.py  test_set.json  train.py
misc/: Cargo.toml  clip_accursed.py  config.toml  eval.html  log-1713711190.1288905.jsonl  log-1713711267.4419498.jsonl  mse_accursed.py  top.json  train_xgboost.py
misc/bad-go-version/: go.mod  go.sum  meme_search.go  ocr.go  problematic_thing.go  problematic_thing_2.go
misc/src/: main.rs  util.rs
sae/: compare_plots.py  export_features.py  model.py  shared.py  shuffle.py  train.py
src/: common.rs  dump_processor.rs  generate_index_shard.rs  get_embedding.py  main.rs  ocr.rs  old_score.rs  query_disk_index.rs  reddit_dump.rs  score_model.rs  video_reader.rs
