[package]
name = "meme-search-engine"
version = "0.1.0"
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
axum = "0.7"
image = { version = "0.25", features = ["avif", "avif-native", "nasm"] }
reqwest = { version = "0.12", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
walkdir = "1"
rmp-serde = "1"
serde_json = "1"
chrono = "0.4"
base64 = "0.22"
anyhow = "1"
fnv = "1"
faiss = "0.12"
ndarray = "0.15"
half = { version = "2" }
regex = "1"
tracing = "0.1"
console-subscriber = "0.4"
futures-util = "0.3"
tokio-stream = "0.1"
num_cpus = "1"
serde_bytes = "0.11"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
json5 = "0.4"
prometheus = "0.13"
lazy_static = "1"
zstd = "0.13"
url = "2"
fastrand = "2"
mimalloc = "0.1"
sonic-rs = "0.3"
ffmpeg-the-third = "2.0"
compact_str = { version = "0.8.0-beta", features = ["serde"] }
itertools = "0.13"
async-recursion = "1"
fast_image_resize = { version = "5", features = ["image"] }
argh = "0.1"
maud = "0.26"
hamming = "0.1"
seahash = "4"
tracing-subscriber = "0.3"
diskann = { path = "./diskann" }
bytemuck = "1"
bitcode = "0.6"
simsimd = "6"
foldhash = "0.1"
memmap2 = "0.9"
candle-core = "0.8"
monoio = "0.2"
hyper = "1"
monoio-compat = { version = "0.2", features = ["hyper"] }
http-body-util = "0.1"
matrixmultiply = "0.3"
bitvec = "1"
region = "3"

[[bin]]
name = "reddit-dump"
path = "src/reddit_dump.rs"

[[bin]]
name = "video-reader"
path = "src/video_reader.rs"

[[bin]]
name = "dump-processor"
path = "src/dump_processor.rs"

[[bin]]
name = "generate-index-shard"
path = "src/generate_index_shard.rs"

[[bin]]
name = "query-disk-index"
path = "src/query_disk_index.rs"
