[package]
name = "meme-search-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.2.0", features = ["fs", "trace", "add-extension"] }
rusty_ulid = "1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rmp-serde = "1"
futures-util = "0.3"
regex = "1.5"
lazy_static = "1"
config = { version = "0.13", default-features = false, features = ["toml"] }
faiss = { version = "0.12", features = [] }
reqwest = "0.11"
walkdir = "2"
rusqlite = { version = "0.30.0", features = ["bundled"] }
futures = "0.3"
image = { version = "0.24", features = ["avif", "webp", "default"] }
rayon = "1.8"